--- a/archives.html
+++ b/archives.html
@@ -52,31 +52,31 @@
 
 <font face="arial,helvetica" size="4">
 <p align="center"> [ <a href="/archives.html#a">A</a> ]
-[ <a href="/archives#b">B</a> ]
-[ <a href="/archives#c">C</a> ]
-[ <a href="/archives#d">D</a> ]
-[ <a href="/archives#e">E</a> ]
-[ <a href="/archives#f">F</a> ]
-[ <a href="/archives#g">G</a> ]
-[ <a href="/archives#h">H</a> ]
-[ <a href="/archives#i">I</a> ]
-[ <a href="/archives#j">J</a> ]
-[ <a href="/archives#k">K</a> ]
-[ <a href="/archives#l">L</a> ]
-[ <a href="/archives#m">M</a> ]<br>
-[ <a href="/archives#n">N</a> ]
-[ <a href="/archives#o">O</a> ]
-[ <a href="/archives#p">P</a> ]
-[ <a href="/archives#q">Q</a> ]
-[ <a href="/archives#r">R</a> ]
-[ <a href="/archives#s">S</a> ]
-[ <a href="/archives#t">T</a> ]
-[ <a href="/archives#u">U</a> ]
-[ <a href="/archives#v">V</a> ]
-[ <a href="/archives#w">W</a> ]
-[ <a href="/archives#x">X</a> ]
-[ <a href="/archives#y">Y</a> ]
-[ <a href="/archives#z">Z</a> ]
+[ <a href="/archives.html#b">B</a> ]
+[ <a href="/archives.html#c">C</a> ]
+[ <a href="/archives.html#d">D</a> ]
+[ <a href="/archives.html#e">E</a> ]
+[ <a href="/archives.html#f">F</a> ]
+[ <a href="/archives.html#g">G</a> ]
+[ <a href="/archives.html#h">H</a> ]
+[ <a href="/archives.html#i">I</a> ]
+[ <a href="/archives.html#j">J</a> ]
+[ <a href="/archives.html#k">K</a> ]
+[ <a href="/archives.html#l">L</a> ]
+[ <a href="/archives.html#m">M</a> ]<br>
+[ <a href="/archives.html#n">N</a> ]
+[ <a href="/archives.html#o">O</a> ]
+[ <a href="/archives.html#p">P</a> ]
+[ <a href="/archives.html#q">Q</a> ]
+[ <a href="/archives.html#r">R</a> ]
+[ <a href="/archives.html#s">S</a> ]
+[ <a href="/archives.html#t">T</a> ]
+[ <a href="/archives.html#u">U</a> ]
+[ <a href="/archives.html#v">V</a> ]
+[ <a href="/archives.html#w">W</a> ]
+[ <a href="/archives.html#x">X</a> ]
+[ <a href="/archives.html#y">Y</a> ]
+[ <a href="/archives.html#z">Z</a> ]
 </p></font>
 <center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 <br>
