--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             <div class="content" id="main-content">
                 <h2>&#9733; Home &#9733;</h2>
                 <h3><i>Is is hot in here? Or did you you just pour lighter fluid on me?~</i></h3>
-                <p>Careful, this grill is hot but her takes on adult media are even hotter~ This is the place to find reviews and essays about NSFW shows and movies you can't find anywhere else!You can see a sampling of my most recent works below and check out the full breadth of my work in <a href="/archives.html">the archive</a>.</p>
-              <p>Currently under construction!</p>
+                <p>Careful, this grill is hot but her takes on adult media are even hotter~ This is the place to find reviews and essays about NSFW shows and movies you can't find anywhere else! <b>Yes, this means there are pictures and articles on this website potentially not apropriate for those under the age of 18. So please make responsible viewing decisions while browsing here!</b> You can see a sampling of my most recent works below and check out the full breadth of my work in <a href="/archives.html">the archive</a>.</p>
+              <p>I just got everything set up here so there would be a clean split between my writing on more adult subjects, so have patience! More articles will be here soon~</p>
 
                 <center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
                  
