--- a/anime_posts/ecchi_hentai_spring_2025_anime_guide.html
+++ b/anime_posts/ecchi_hentai_spring_2025_anime_guide.html
@@ -192,9 +192,9 @@ At least, that’s what he thought... until he glimpsed Fukami coming out of the
 <div id="c_widget"></div>
 <script src="/comment-widget.js"></script>
 
-                <center><p><img src="/StarBorder.png" width="100%" height="auto" alt=""></p></center>
+                <center><p><img src="/xtape.png" width="100%" height="auto" alt=""></p></center>
                 <center>
-                    <p>[ <a href="/index">Home</a> ] &#9733; [ Next ]</p> 
+                    <p>[ <a href="/index.html">Home</a> ] &#9733; [ Next ]</p> 
                 </center>
                 </div>
         </div>
