--- a/archives.html
+++ b/archives.html
@@ -46,7 +46,7 @@
 
 <center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
-<center><h3> &#9733; <a href="/reviews">Reviews</a> &#9733;</h3></center>
+<center><h3> &#9733; Reviews Coming Soon! &#9733;</h3></center>
 
 <center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 
