Update navigation links in anime guide

--- a/anime_posts/ecchi_hentai_spring_2025_anime_guide.html
+++ b/anime_posts/ecchi_hentai_spring_2025_anime_guide.html
@@ -191,7 +191,7 @@ At least, that’s what he thought... until he glimpsed Fukami coming out of the
   <center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 
                 <center>
-                    <p>[ <a href="/index.html">Home</a> ] &#9733; [ Next ]</p> 
+                    <p>[ <a href="/index.html">Home</a> ] &#9733; [ <a href="/anime_posts/ImmaYoujoThePoliticsOfTransDehumanization.html">Next</a> ]</p> 
                 </center>
                 </div>
         </div>
