--- a/anime_posts/ImmaYoujoThePoliticsOfTransDehumanization.html
+++ b/anime_posts/ImmaYoujoThePoliticsOfTransDehumanization.html
@@ -41,7 +41,7 @@
             <div class="content" id="main-content">
                 <i><h2>Imma Youjo: The Politics of Trans Dehumanization &#9733;</h2></i>
 
-<p><img style="display:block;" width="100%" height="100%" src="anime_posts/ImmaYoujo4/ImmaYoujoEp4Art3.jpg" align="center" alt="A showing small screenshots from each of the anime being discussed in the article. It also shows a flustered picture of an anthropomorphic grill character. Text on it reads Spring 2025 Preview Guide"></p>
+<p><img style="display:block;" width="100%" height="100%" src="/anime_posts/ImmaYoujo4/ImmaYoujoEp4Art3.jpg" align="center" </p>
 
 <center><i><h5>(Posted October 29, 2025)</h5></i></center>
 
