Update content warning in ImmaYoujo article

--- a/anime_posts/ImmaYoujoThePoliticsOfTransDehumanization.html
+++ b/anime_posts/ImmaYoujoThePoliticsOfTransDehumanization.html
@@ -45,7 +45,7 @@
 
 <center><i><h5>(Posted October 29, 2025)</h5></i></center>
 
-<center><p><b>CW: Corrective Rape, Fascism, and Violence Against Trans People </b></p></center>
+<center><p><b>CW: Nudity, Corrective Rape, Fascism, and Violence Against Trans People </b></p></center>
               
 <blockquote cite="Imma Youjo, Episode 4">“Men will be drawn to her and start desiring her greatly. She can have anything and anyone with her magical power. Men will hurt and kill each other until everything is destroyed. Nobody can stop it. Even if they know something is wrong.”</blockquote>
 <p>I never expected that helping a friend digitize a few old hentai VHS tapes would leave me musing, “that was a haunting dissection of what happens when trans people are stripped of their personhood.” But <i>Imma Youjo</i> is not your average hentai. Each episode “is a tale of a different Maya in a different world” where each “Maya” has destructive powers and can control everyone around them, especially men, to do their bidding. It deconstructs the concept seen in many hentai that women are purely there to have sex with in fascinating ways across its various settings.</p>
