Replace tape image with xtape image in index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <p>Careful, this grill is hot but her takes on adult media are even hotter~ This is the place to find reviews and essays about NSFW shows and movies you can't find anywhere else! <b>Yes, this means there are pictures and articles on this website potentially not apropriate for those under the age of 18. So please make responsible viewing decisions while browsing here!</b> You can see a sampling of my most recent works below and check out the full breadth of my work in <a href="/archives.html">the archive</a>.</p>
               <p>I just got everything set up here so there would be a clean split between my writing on more adult subjects, so have patience! More articles will be here soon~</p>
  
-                <center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
+                <center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
                  
                    <center><p><img style="display:block;" width="80%" height="100%" src="/anime_posts/ImmaYoujo4/ImmaYoujoEp4Art3.jpg" align="center" alt=""></p></center>
                 <h4><a href="/anime_posts/ImmaYoujoThePoliticsOfTransDehumanization.html">
