Add new article link to archives.html

--- a/archives.html
+++ b/archives.html
@@ -116,6 +116,7 @@
 
 <a name="h"><h3>&#9733;Article Titles H</h3>
 </a>
+<p>&#9733; <a href="/anime_posts/adultanimereview2025.html">Heat or Hot Garbage: Grill's 2025 Adult Anime Awards</a></p>
 <center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
