Update URLs in Spring 2025 anime guide HTML

--- a/anime_posts/ecchi_hentai_spring_2025_anime_guide.html
+++ b/anime_posts/ecchi_hentai_spring_2025_anime_guide.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Good, The Bad, and the Horny: Spring Anime 2025 Preview Guide </title>
     <meta name="description" content="Get early impressions on the lewder anime releases of the Spring 2025 season from a certified hentai master!">
-    <meta property="og:url" content="https://nsfw.literalgrill.com/anime_posts/ecchi_hentai_spring_2025_anime_guide">
+    <meta property="og:url" content="https://nsfw.literalgrill.com/anime_posts/ecchi_hentai_spring_2025_anime_guide.html">
     <meta property="og:type" content="website">
     <meta property="og:title" content="The Good, The Bad, and the Horny: Spring Anime 2025 Preview Guide">
     <meta property="og:description" content="Get early impressions on the lewder anime releases of the Spring 2025 season from a certified hentai master!">
     <meta property="og:image" content="https://nsfw.literalgrill.com/anime_posts/anime_pics/Spring2025HornyPreviewGuide.jpg">
-    <meta property="twitter:domain" content="https://nsfw.literalgrill.com/anime_posts/ecchi_hentai_spring_2025_anime_guide">
-    <meta property="twitter:url" content="https://nsfw.literalgrill.com/anime_posts/ecchi_hentai_spring_2025_anime_guide">
+    <meta property="twitter:domain" content="https://nsfw.literalgrill.com/anime_posts/ecchi_hentai_spring_2025_anime_guide.html">
+    <meta property="twitter:url" content="https://nsfw.literalgrill.com/anime_posts/ecchi_hentai_spring_2025_anime_guide.html">
     <meta name="twitter:title" content="The Good, The Bad, and the Horny: Spring Anime 2025 Preview Guide">
     <meta name="twitter:description" content="Get early impressions on the lewder anime releases of the Spring 2025 season from a certified hentai master!">
     <meta name="twitter:image" content="https://nsfw.literalgrill.com/anime_posts/anime_pics/Spring2025HornyPreviewGuide.jpg">
