Update URLs in meta tags for HTML file

--- a/anime_posts/ImmaYoujoThePoliticsOfTransDehumanization.html
+++ b/anime_posts/ImmaYoujoThePoliticsOfTransDehumanization.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imma Youjo: The Politics of Trans Dehumanization </title>
     <meta name="description" content="Discover how this hentai turns Europe’s witch hunts into a mirror for today’s rising fascism.">
-    <meta property="og:url" content="https://nsfw.literalgrill.com/anime_posts/ImmaYoujoThePoliticsOfTransDehumanization">
+    <meta property="og:url" content="https://nsfw.literalgrill.com/anime_posts/ImmaYoujoThePoliticsOfTransDehumanization.html">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Imma Youjo: The Politics of Trans Dehumanization">
     <meta property="og:description" content="Discover how this hentai turns Europe’s witch hunts into a mirror for today’s rising fascism.">
     <meta property="og:image" content="https://nsfw.literalgrill.com/anime_posts/ImmaYoujo4/ImmaYoujoEp4Art.jpg">
-    <meta property="twitter:domain" content="https://nsfw.literalgrill.com/anime_posts/ImmaYoujoThePoliticsOfTransDehumanization">
-    <meta property="twitter:url" content="https://nsfw.literalgrill.com/anime_posts/ImmaYoujoThePoliticsOfTransDehumanization">
+    <meta property="twitter:domain" content="https://nsfw.literalgrill.com/anime_posts/ImmaYoujoThePoliticsOfTransDehumanization.html">
+    <meta property="twitter:url" content="https://nsfw.literalgrill.com/anime_posts/ImmaYoujoThePoliticsOfTransDehumanization.html">
     <meta name="twitter:title" content="Imma Youjo: The Politics of Trans Dehumanization">
     <meta name="twitter:description" content="Discover how this hentai turns Europe’s witch hunts into a mirror for today’s rising fascism.">
     <meta name="twitter:image" content="https://nsfw.literalgrill.com/anime_posts/ImmaYoujo4/ImmaYoujoEp4Art.jpg">
