--- a/anime_posts/adultanimereview2025.html
+++ b/anime_posts/adultanimereview2025.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heat or Hot Garbage: Grill's 2025 Adult Anime Awards </title>
     <meta name="description" content="Certified hentai master LiteralGrill presents a roundup of adult animes best and worst outings of 2025.">
-    <meta property="og:url" content="https://nsfw.literalgrill.com/anime_posts/adultanimereview2025">
+    <meta property="og:url" content="https://nsfw.literalgrill.com/anime_posts/adultanimereview2025.html">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Heat or Hot Garbage: Grill's 2025 Adult Anime Awards">
     <meta property="og:description" content="Certified hentai master LiteralGrill presents a roundup of adult animes best and worst outings of 2025.">
     <meta property="og:image" content="https://nsfw.literalgrill.com/anime_posts/anime_pics/heatorhotgarbage.jpg">
-    <meta property="twitter:domain" content="https://nsfw.literalgrill.com/anime_posts/adultanimereview2025">
-    <meta property="twitter:url" content="https://nsfw.literalgrill.com/anime_posts/adultanimereview2025">
+    <meta property="twitter:domain" content="https://nsfw.literalgrill.com/anime_posts/adultanimereview2025.html">
+    <meta property="twitter:url" content="https://nsfw.literalgrill.com/anime_posts/adultanimereview2025.html">
     <meta name="twitter:title" content="Heat or Hot Garbage: Grill's 2025 Adult Anime Awards">
     <meta name="twitter:description" content="Certified hentai master LiteralGrill presents a roundup of adult animes best and worst outings of 2025.">
     <meta name="twitter:image" content="https://nsfw.literalgrill.com/anime_posts/anime_pics/heatorhotgarbage.jpg">
